--- a/src/index.css
+++ b/src/index.css
@@ -95,16 +95,30 @@ footer {
 }
 
 .weather-forcast {
+    display: flex;
     margin-top: 20px;
-    text-align: center;
+    justify-content: space-around;
 
 }
-.weather-forecast-date,
-.weather-forcast-temperature-min {
-   opacity: 0.5;
+.weather-forecast-date {
+   text-align: center;
+   color: rgba (39, 33, 66, 0.4);
+   font-size:16px;
+   line-height: 20px;
+   margin-bottom: 10px;
+
 }
+
 
 .weather-forcast-temperature{
-    font-size: 13px;
+    text-align: center;
+    color: #f65282;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
     
+}
+.weather-forcast-icon {
+    font-size: 38px;
+    text-align: center;
 }
